# AstralBridge

./: .env.example  .gitignore  .readthedocs.yaml  CLAUDE.md  KAGGLE.md  LICENSE  README.md  demo.py  kaggle_demo.ipynb  pyproject.toml
aion/codecs/: spectrum.py
aion/codecs/preprocessing/: spectrum.py
astralbridge/: __init__.py  cli.py
astralbridge/adapters/: __init__.py  base.py  generator.py  validation.py
astralbridge/canonical/: __init__.py  observation.py  validators.py
astralbridge/gemma/: __init__.py  client.py  prompts.py
astralbridge/inference/: __init__.py  engine.py
astralbridge/integration/: __init__.py  aion_bridge.py
astralbridge/interpretation/: __init__.py  scientific_interpreter.py
docs/: api.rst  astralbridge.md  conf.py  index.md
examples/: sample_observation.json  survey_docs.txt  survey_schema.json
tests/astralbridge/: conftest.py  test_adapter_generation.py  test_canonical_bridge.py  test_cli.py  test_inference.py  test_interpretation.py
tests/test_data/: EBV_codec_decoded_batch.pt  EBV_codec_encoded_batch.pt  EBV_codec_input_batch.pt  FLUX_G_codec_decoded_batch.pt  FLUX_G_codec_encoded_batch.pt  FLUX_G_codec_input_batch.pt  FLUX_I_codec_decoded_batch.pt  FLUX_I_codec_encoded_batch.pt  FLUX_I_codec_input_batch.pt  FLUX_R_codec_decoded_batch.pt  FLUX_R_codec_encoded_batch.pt  FLUX_R_codec_input_batch.pt  FLUX_W1_codec_decoded_batch.pt  FLUX_W1_codec_encoded_batch.pt  FLUX_W1_codec_input_batch.pt  FLUX_W2_codec_decoded_batch.pt  FLUX_W2_codec_encoded_batch.pt  FLUX_W2_codec_input_batch.pt  FLUX_W3_codec_decoded_batch.pt  FLUX_W3_codec_encoded_batch.pt  FLUX_W3_codec_input_batch.pt  FLUX_W4_codec_decoded_batch.pt  FLUX_W4_codec_encoded_batch.pt  FLUX_W4_codec_input_batch.pt  FLUX_Z_codec_decoded_batch.pt  FLUX_Z_codec_encoded_batch.pt  FLUX_Z_codec_input_batch.pt  SHAPE_E1_codec_decoded_batch.pt  SHAPE_E1_codec_encoded_batch.pt  SHAPE_E1_codec_input_batch.pt  SHAPE_E2_codec_decoded_batch.pt  SHAPE_E2_codec_encoded_batch.pt  SHAPE_E2_codec_input_batch.pt  SHAPE_R_codec_decoded_batch.pt  SHAPE_R_codec_encoded_batch.pt  SHAPE_R_codec_input_batch.pt  SPECTRUM_decoded_batch.pt  SPECTRUM_encoded_batch.pt  SPECTRUM_input_batch.pt  Z_codec_decoded_batch.pt  (+74 more)
